fix: buttons on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -2651,9 +2651,9 @@ fieldset:disabled a.btn {
   flex: 1 1 auto;
   background-color: black;
   margin: 10px;
-  padding: 1.15rem;
+  padding: 20px 40px;
   border: 2px solid;
-  width: 13%;
+  width: fit-content;
   text-align: center;
   text-transform: uppercase;
   font-size: 1rem;
